--- a/使い方.md
+++ b/使い方.md
@@ -1,11 +1,13 @@
-github Desktop使い方
+# github Desktop使い方
 
-# 共有するファイルを変更する直前
+## 共有するファイルを変更する直前に以下を行う
 
 1. Fetch originをクリック
 2. ［Pull］ボタンが出たら、クリックしてダウンロード
 
-# ファイルの変更を行う
+## ファイルの変更
+
+## ファイルの変更後に以下を行う
 
 1. ［Commit to master］をクリック
 2. ［Push origin］をクリックして、アップロード。通常はこれで終わり。
