--- a/使い方.md
+++ b/使い方.md
@@ -1,13 +1,13 @@
 # github Desktop使い方
 
-## ファイルを変更する直前に以下を行う
+## ①ファイルを変更する直前に以下を行う
 
 1. Fetch originをクリック
 2. ［Pull］ボタンが出たら、クリックしてダウンロード
 
-## ファイルの変更
+## ②ファイルの変更を行う
 
-## ファイルの変更後に以下を行う
+## ③ファイルの変更後に以下を行う
 
 1. ［Commit to master］をクリック
 2. ［Push origin］をクリックして、アップロード。通常はこれで終わり。
