--- a/使い方.md
+++ b/使い方.md
@@ -2,8 +2,8 @@
 
 ## ①ファイルを変更する直前に以下を行う
 
-1. Fetch originをクリック
-2. ［Pull］ボタンが出たら、クリックしてダウンロード
+1. ［Fetch origin］をクリックして、変更がないかチェック
+2. ［Pull］ボタンが出たら、クリックしてダウンロード。なければ変更なし。
 
 ## ②ファイルの変更を行う
 
