--- a/使い方.md
+++ b/使い方.md
@@ -16,7 +16,7 @@
 
 3. ［Fetch］ボタンが出たらクリックして、アップ先と比較
 4. ［Pull origin］をクリックして、ダウンロード
-5. ［Open with Default Program］でどちらを使うかを編集
-6. ［Commit Merge］をクリックで、合わせる
+5. ［Open with Default Program］で、どちらを使うかを編集
+6. ［Commit Merge］をクリックで、2つを合体する
 7. ［Push origin］をクリックして、アップロード
 
